make jsdk1.4 compliant
git-svn-id: http://svn.aei.mpg.de/eScience/GridSphere/trunk@4812 9c99c85f-4d0c-0410-8460-a9a1c48a3a7f